Avances introducción y primer capítulo

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,6 +23,7 @@ book:
     
     - part: "Introduction to Econometrics"
       chapters:
+        - chapters/intro-00.qmd
         - chapters/intro-01.qmd
         - chapters/intro-02.qmd
         - chapters/intro-03.qmd
