--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,22 +13,44 @@ permissions:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
 
+      # 1) Instalar R
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: 'release'
+
+      # 2) Instalar paquetes de R que necesitas
+      #   Agrega aquí otros paquetes que uses en el libro (tidyverse, etc.)
+      - name: Install R packages
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          packages: |
+            any::knitr
+            any::rmarkdown
+            any::tidyverse
+            any::tsibble
+
+
+      # 3) Instalar Quarto
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
           version: 'release'
 
+      # 4) Renderizar el proyecto Quarto 
       - name: Render Quarto Project
         run: quarto render
 
+      # 5) Publicar en GitHub Pages (usando la carpeta _book)
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_book
+
