--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,39 +23,35 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: 'release'
+          use-public-rspm: true
 
-      # 2) Instalar paquetes de R necesarios
+      # 2) Instalar paquetes de R necesarios para el libro
       - name: Install R packages
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          packages: |
+          extra-packages: |
             any::knitr
             any::rmarkdown
-      
-            # Tidyverse y manipulación
+
             any::tidyverse
             any::data.table
             any::janitor
             any::lubridate
-      
-            # Tablas y reporte
+
             any::modelsummary
             any::gt
             any::kableExtra
             any::broom
-      
-            # Econometría clásica
+
             any::sandwich
             any::lmtest
             any::AER
             any::fixest
             any::clubSandwich
             any::estimatr
-      
-            # Panel data
+
             any::plm
-      
-            # Series de tiempo
+
             any::tsibble
             any::tsibbledata
             any::fable
@@ -64,17 +60,14 @@ jobs:
             any::vars
             any::urca
             any::tseries
-      
-            # Causalidad / microeconometría
+
             any::MatchIt
             any::marginaleffects
             any::pscl
             any::survival
-      
-            # Datasets útiles
+
             any::wooldridge
             any::Ecdat
-
 
       # 3) Instalar Quarto
       - name: Set up Quarto
@@ -82,15 +75,14 @@ jobs:
         with:
           version: 'release'
 
-      # 4) Renderizar el proyecto Quarto 
+      # 4) Renderizar el proyecto Quarto (libro)
       - name: Render Quarto Project
         run: quarto render
 
-      # 5) Publicar en GitHub Pages (usando la carpeta _book)
+      # 5) Publicar en GitHub Pages usando la carpeta _book
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_book
-
